Run again with refactoring mostly complete

--- a/blog/003.md
+++ b/blog/003.md
@@ -11,3 +11,18 @@ sudo adduser $USER lp
 https://developers.redhat.com/blog/author/tdeseyn/
 
 https://medium.com/cesar-update/exposing-a-d-bus-interface-in-linux-part-2-90374a9e381b
+
+# Some thoughts
+
+* The Async approach seems to make sense if we're consuming a service.
+* If we are exporting a service, then Async does not seem to make sense, since we get called and process the request when we get the message. It's async from the "other" side's perspective.
+
+ * sudo btmon
+ * Enable verbose logging probably required:
+ * https://stackoverflow.com/questions/37003147/i-want-to-enable-debug-messages-on-bluez
+ * https://wiki.ubuntu.com/DebuggingBluetooth
+
+When publishing services, does it even make sense to have an interface which is then implemented? I guess it's nice but the Attributes are not inherited so have to apply that anywyas.
+
+The deeper question is then, exactly what does it do for Tmds.Dbus if you implement 
+` [DBusInterface("???")]` ??
