--- a/blog/003.md
+++ b/blog/003.md
@@ -15,7 +15,7 @@ https://medium.com/cesar-update/exposing-a-d-bus-interface-in-linux-part-2-90374
 # Some thoughts
 
 * The Async approach seems to make sense if we're consuming a service.
-* If we are exporting a service, then Async does not seem to make sense, since we get called and process the request when we get the message. It's async from the "other" side's perspective.
+* If we are exporting a service, then Async does not seem to make sense, since we get called and process the request when we get the message. It's async from the "other" side's perspective. Unless of course the method does IO or something.
 
  * sudo btmon
  * Enable verbose logging probably required:
