--- a/blog/003.md
+++ b/blog/003.md
@@ -29,9 +29,7 @@ The deeper question is then, exactly what does it do for Tmds.Dbus if you implem
 
 https://github.com/brookpatten/Mono.BlueZ/blob/master/Mono.BlueZ.DBus/Service.cs
 
-<<<<<<< Updated upstream
 https://learn.sparkfun.com/tutorials/midi-ble-tutorial
-=======
 https://learn.adafruit.com/install-bluez-on-the-raspberry-pi?view=all
 
 # Debugging
@@ -39,4 +37,6 @@ View a live log of what the bluetooth deamon is producing
 ```
 journalctl --unit=bluetooth -f
 ```
->>>>>>> Stashed changes
+
+# Intesting site
+https://github.com/hacklily/hacklily
