Add basic timer

--- a/blog/003.md
+++ b/blog/003.md
@@ -38,5 +38,12 @@ View a live log of what the bluetooth deamon is producing
 journalctl --unit=bluetooth -f
 ```
 
-# Intesting site
+# Interesting site
 https://github.com/hacklily/hacklily
+
+# Interesting article
+
+https://smartlockpicking.com/slides/BruCON0x09_2017_Hacking_Bluetooth_Smart_locks.pdf
+
+# BTLE on Linux
+https://elinux.org/images/3/32/Doing_Bluetooth_Low_Energy_on_Linux.pdf
