Add managed midi library

--- a/blog/003.md
+++ b/blog/003.md
@@ -47,3 +47,10 @@ https://smartlockpicking.com/slides/BruCON0x09_2017_Hacking_Bluetooth_Smart_lock
 
 # BTLE on Linux
 https://elinux.org/images/3/32/Doing_Bluetooth_Low_Energy_on_Linux.pdf
+
+# Library for accessing Midi from C#
+https://www.nuget.org/packages/managed-midi/
+
+```
+dotnet add package managed-midi --version 1.3.2
+```
