--- a/blog/003.md
+++ b/blog/003.md
@@ -57,3 +57,13 @@ dotnet add package managed-midi --version 1.3.2
 
 * https://github.com/atsushieno/managed-midi
 * https://dev.to/atsushieno/managed-midi-the-truly-cross-platform-net-midi-api-56hk
+
+## Disconnect
+
+Looks like it may be as simple as sending this message:
+Type=method_call  Endian=l  Flags=0  Version=1  Priority=0 Cookie=65
+  Sender=:1.1423  Destination=org.bluez  Path=/org/bluez/hci0/dev_xx_xx... Interface=org.bluez.Device1  Member=Disconnect
+  UniqueName=:1.1423
+  MESSAGE "" {
+  };
+
