--- a/blog/003.md
+++ b/blog/003.md
@@ -68,3 +68,7 @@ Type=method_call  Endian=l  Flags=0  Version=1  Priority=0 Cookie=65
   };
 
 https://developer.apple.com/library/archive/documentation/NetworkingInternetWeb/Conceptual/CoreBluetooth_concepts/BestPracticesForInteractingWithARemotePeripheralDevice/BestPracticesForInteractingWithARemotePeripheralDevice.html
+
+## DBus documentation 
+
+https://dbus.freedesktop.org/doc/dbus-api-design.html
